<resources>
    <string name="app_name">App Notes</string>
    <string name="activity_create_note_input_note_title_hint">Note Title</string>
    <string name="activity_create_note_input_note_subtitle_hint">note_subtitle</string>
    <string name="activity_create_note_input_note_text_hint">Type note here..</string>
    <string name="activity_main_text_my_note_text">My Notes</string>
    <string name="activity_main_input_search_hint">Search notes</string>
    <string name="layout_add_url_text_add_url_title_text">Add URL</string>
    <string name="layout_add_url_input_url_hint">Enter URL</string>
    <string name="layout_add_url_text_add_text">ADD</string>
    <string name="layout_add_url_text_cancel_text">CANCEL</string>
    <string name="layout_delete_note_text_delete_note_title_text">Delete Note</string>
    <string name="layout_delete_note_text_delete_note_message_text">Are you sure want to delete this note?</string>
    <string name="layout_delete_note_text_delete_note_text">DELETE NOTE</string>
    <string name="layout_delete_note_text_cancel_text">CANCEL</string>
    <string name="layout_miscellaneous_text_miscellaneous_text">Miscellaneous</string>
    <string name="layout_miscellaneous_text_pick_color_text">Pick Color</string>
    <string name="layout_miscellaneous_text_add_image_text">Add Image</string>
    <string name="layout_miscellaneous_text_add_url_text">Add URL</string>
    <string name="layout_miscellaneous_text_delete_note_text">Delete Note</string>
    <string name="title_activity_ocrtext">OCRTextActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="group_name">Group 5 - IS1428 - PRM391</string>
    <string name="nav_ocr">OCR Text</string>
    <string name="nav_home">Home</string>
    <string name="navagation_drawer_open">Open navagation drawer</string>
    <string name="navagation_drawer_close">Close navagation drawer</string>
    <string name="nav_speak_text">Speech to text</string>
    <string name="read_pdf_file">Read PDF file</string>
    <string name="about">About</string>

    <string name="colour_picker_header">Choose a colour</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_select">Select</string>

    <string name="rationale_header">Permission required</string>
    <string name="text_description">Storage access is needed to save or share images.</string>
    <string name="button_allow">Allow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="draw">Draw</string>
</resources>